[package]
name = "bmbp_app_util"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
bmbp_rdbc_orm = { workspace = true }
bmbp_auth = { workspace = true }
bmbp_http_type = { workspace = true }
bmbp_ctx_vars = { workspace = true }
salvo = { workspace = true }


